--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no " />
-  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" content="width=device-width, initial-scale=1 />
+  <meta name=" theme-color" content="#000000" />
   <meta name="description" content="Web-Application for rolePlay games" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
